[gd_scene load_steps=4 format=3 uid="uid://b0cmycvjsiv00"]

[ext_resource type="Script" uid="uid://b3giq6gat73ih" path="res://gui/result_panel.gd" id="1_ym8xb"]
[ext_resource type="Texture2D" uid="uid://bxb808qg8fso5" path="res://resources/icons/white/add.png" id="3_eiifo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xnvk4"]
bg_color = Color(0.1812, 0.1812, 0.1812, 1)
border_width_top = 4

[node name="ResultPanel" type="PanelContainer" groups=["live_charts"]]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xnvk4")
script = ExtResource("1_ym8xb")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AddChartButton" type="Button" parent="MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "+Chart"
icon = ExtResource("3_eiifo")
expand_icon = true

[node name="Button" type="Button" parent="MainContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "+Control"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="ChartContainer" type="HBoxContainer" parent="MainContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MainContainer/HBoxContainer/AddChartButton" to="." method="_on_add_chart_button_pressed"]
